--- a/q5.md
+++ b/q5.md
@@ -1,1 +1,32 @@
+i. Describe what each program snippet does to compute its results.
+ans:
+#Approach 1
+def doubleL(n):
+    res = []
+    for i in range(n): res.append(i * 2)
+    return res
 
+for i in doubleL(5): 
+    print(i, end=' : ')
+
+In this approach, function doubleL(n) is declared. it first creates an empty list res, then uses a for loop to append the number * 2 in the range n excluding n to the list. The function returns the list after this is done. The for loop outside of the function iterates over the list returned by the function and prints each element with the ' : ' seperator.
+
+#Approach 2
+for x in [n * 2 for n in range(5)]:
+    print(x, end=' : ')
+
+In this approach, a for loop is used to generate a list of each number * 2 in the range of 5. The loop then iterates over this list, printing each number. Appending lists using list related functions is faster than loops because they are more optimized for iterating over them. The in-built append() function appends a value to the end of the list.
+
+#Approach 3
+def doubleG(n):
+        for i in range(n):
+            yield i * 2
+
+for i in doubleG(5):
+        print(i, end=' : ')
+
+In this approach, a function doubleG(n) is declared. The function uses a keyword called yield to produce a sequence of values. The functions generates the double of each number in the range of n. The for loop outside the function iterates over the generator returned by the function and prints each element followed by ' : '.
+
+ii. What type of function is doubleG(n)? What is the advantage of using such a function?
+ans: The function doubleG(n) is a generator function. The yield keyword is used in Python generators. A generator function is used when we need to iterate over a sequence but don't want to store the entire sequence in memory. It's more memory efficient and allows us to produce a sequence of results over time, rather than computing it all at once and sending it back to the list.
+It saves memory because it stores the data in a local states and also each time it executes the function, it doesn't need to start again from the beginning as the previous states are retained.
